[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Sprites/boss.png" type="Texture" id=1]
[ext_resource path="res://data/Actors/Actor.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/Actors/Boss.gd" type="Script" id=3]
[ext_resource path="res://assets/Sounds/Explosion.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/Sounds/GunShot.wav" type="AudioStream" id=5]
[ext_resource path="res://data/Effects/BossBullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://data/Effects/Debris.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Sprites/laser.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2.63902, 0.378929 ),
"update": 0,
"values": [ Vector2( 244.659, 712.764 ), Vector2( 244.659, 552.436 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "death"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 244.659, 552.436 ), Vector2( 244.659, 574.66 ), Vector2( 244.659, 552.436 ), Vector2( 244.659, 574.66 ), Vector2( 244.659, 552.436 ), Vector2( 244.659, 574.66 ), Vector2( 244.659, 552.436 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.6, 1, 1.1, 1.5, 1.6, 2, 2.1, 2.5, 2.6, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_hurt_noise"
}, {
"args": [  ],
"method": "explode"
}, {
"args": [  ],
"method": "play_hurt_noise"
}, {
"args": [  ],
"method": "explode"
}, {
"args": [  ],
"method": "play_hurt_noise"
}, {
"args": [  ],
"method": "explode"
}, {
"args": [  ],
"method": "play_hurt_noise"
}, {
"args": [  ],
"method": "explode"
}, {
"args": [  ],
"method": "play_hurt_noise"
}, {
"args": [  ],
"method": "explode"
}, {
"args": [  ],
"method": "play_hurt_noise"
}, {
"args": [  ],
"method": "explode"
}, {
"args": [  ],
"method": "play_hurt_noise"
}, {
"args": [  ],
"method": "explode"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "hover"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 244.659, 552.436 ), Vector2( 244.659, 574.66 ) ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 43.897
height = 330.267

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 246.126, 277.835 )

[sub_resource type="Animation" id=7]
resource_name = "charge"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "damage"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.152941, 0.745098, 0.0313726, 1 ), Color( 0.152941, 0.745098, 0.0313726, 0 ), Color( 0.152941, 0.745098, 0.0313726, 1 ), Color( 0.152941, 0.745098, 0.0313726, 0 ), Color( 0.152941, 0.745098, 0.0313726, 1 ) ]
}

[node name="Boss" instance=ExtResource( 2 )]
modulate = Color( 0.152941, 0.745098, 0.0313726, 1 )
position = Vector2( 244.659, 552.436 )
collision_layer = 4
collision_mask = 17
script = ExtResource( 3 )
Bullet = ExtResource( 6 )
gun_cooldown = 2.0
gun_shots = 2
turret_speed = 10.0

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "appear"
anims/appear = SubResource( 1 )
anims/death = SubResource( 6 )
anims/hover = SubResource( 2 )

[node name="CollisionShape2D" parent="." index="2"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="Timer" parent="." index="3"]
one_shot = true
autostart = true

[node name="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 4 )
bus = "SoundFX"

[node name="DetectRadius" type="Area2D" parent="." index="6"]
position = Vector2( 0, -96.436 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]
position = Vector2( 1.18921, -202.165 )
shape = SubResource( 4 )

[node name="ShootSounds" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource( 5 )
bus = "Pitched"

[node name="LaserCharge" parent="." index="8" instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -5.66962, -25.1983 )
emitting = true
one_shot = false
explosiveness = 0.0
orbit_velocity = 64.51

[node name="AnimationPlayer" type="AnimationPlayer" parent="LaserCharge" index="0"]
anims/charge = SubResource( 7 )

[node name="LaserTimer" type="Timer" parent="." index="9"]
wait_time = 8.0
autostart = true

[node name="Turret1" type="Sprite" parent="." index="10"]
position = Vector2( -146.481, -34.7963 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 60, 0, 20, 40 )

[node name="Muzzle" type="Position2D" parent="Turret1" index="0"]
position = Vector2( 1.28406, -26.8124 )

[node name="Turret2" type="Sprite" parent="." index="11"]
position = Vector2( 136.94, -34.7963 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 60, 0, 20, 40 )

[node name="Muzzle" type="Position2D" parent="Turret2" index="0"]
position = Vector2( -0.352875, -25.2889 )

[node name="DamagePlayer" type="AnimationPlayer" parent="." index="12"]
anims/damage = SubResource( 5 )

[node name="ExplosionPoints" type="Node2D" parent="." index="13"]

[node name="CPUParticles2D" parent="ExplosionPoints" index="0" instance=ExtResource( 7 )]
position = Vector2( -143.469, -6.60712 )

[node name="CPUParticles2D2" parent="ExplosionPoints" index="1" instance=ExtResource( 7 )]
position = Vector2( -60.4079, -5.66327 )

[node name="CPUParticles2D3" parent="ExplosionPoints" index="2" instance=ExtResource( 7 )]
position = Vector2( 58.5203, -8.49487 )

[node name="CPUParticles2D4" parent="ExplosionPoints" index="3" instance=ExtResource( 7 )]
position = Vector2( 154.795, -8.49487 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
